# customer-churn-prediction

./: .gitignore  README.md  pyproject.toml
NOTEBOOKS/: EDA.ipynb
customer_churn/artifacts/: test.csv  train.csv
customer_churn/exceptions/: __init__.py
customer_churn/services/components/: data_ingestion.py
customer_churn/utils/: utilities.py
