[tool.poetry]
name = "customer-churn"
version = "0.1.0"
description = ""
authors = ["amarnadh553 <amarnadh553@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
